--- a/CarnivorousPlants/CarnivorousPlants/Views/Project/Create.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Project/Create.cshtml
@@ -8,7 +8,6 @@
 
 <h1>Create project</h1>
 <hr />
-<b>Model: @Model.Name</b>
 @*<div>
         <ul>
             @foreach (var domain in Model.Domains)
@@ -25,7 +24,7 @@
 
     <div class="form-group">
         <label asp-for="Name" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        <div>
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
@@ -33,64 +32,66 @@
 
     <div class="form-group">
         <label asp-for="Description" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        <div>
             <input asp-for="Description" class="form-control" />
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
     </div>
 
-    <table class="table table-condensed table-bordered" header header-content="Domain">
-        <thead>
-            <tr>
-                <th>Select</th>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Enabled</th>
-                <th>Exportable</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            @foreach (var domain in Model.Domains)
-            {
+    <div>
+        <table class="table table-condensed table-bordered" header header-content="Domain">
+            <thead>
                 <tr>
-                    <td>@Html.RadioButtonFor(m => m.DomainId, @domain.Id)</td>
-                    <td>@domain.Id</td>
-                    <td>@domain.Name</td>
-                    <td>@domain.Type</td>
-                    <td>@domain.Enabled</td>
-                    <td>@domain.Exportable</td>
+                    <th>Select</th>
+                    @*<th>Id</th>*@
+                    <th>Name</th>
+                    <th>Type</th>
+                    <th>Enabled</th>
+                    <th>Exportable</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
 
-    <table class="table table-condensed table-bordered" header header-content="Classification">
-        <thead>
-            <tr>
-                <th>Select</th>
-                <th>Classification Type</th>
-            </tr>
-        </thead>
+            <tbody>
+                @foreach (var domain in Model.Domains)
+                {
+                    <tr>
+                        <td>@Html.RadioButtonFor(m => m.DomainId, @domain.Id)</td>
+                        @*<td>@domain.Id</td>*@
+                        <td>@domain.Name</td>
+                        <td>@domain.Type</td>
+                        <td>@domain.Enabled</td>
+                        <td>@domain.Exportable</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
-        <tbody>
-            @foreach (var classificationType in ClassificationType.Types)
-            {
+        <table class="table table-condensed table-bordered" header header-content="Classification">
+            <thead>
                 <tr>
-                    <td>@Html.RadioButtonFor(m => m.ClassificationType, classificationType)</td>
-                    <td>@classificationType</td>
+                    <th>Select</th>
+                    <th>Classification Type</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
 
+            <tbody>
+                @foreach (var classificationType in ClassificationType.Types)
+                {
+                    <tr>
+                        <td>@Html.RadioButtonFor(m => m.ClassificationType, classificationType)</td>
+                        <td>@classificationType</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 
 
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div>
             <input type="submit" class="btn btn-success btn-block" value="Create" />
+            <a class="btn btn-sm btn-block btn-outline-primary" asp-action="Index">Back</a>
         </div>
         @*<div class="col-md-5">
                 <input type="submit" class="btn btn-danger btn-block" value="Reject" asp-route-accepted="@false" asp-route-returnUrl="@ViewData["ReturnUrl"]" />
@@ -99,7 +100,6 @@
                 <input type="submit" class="btn btn-success" value="Accept" asp-route-accepted="@true" asp-route-returnUrl="@ViewData["ReturnUrl"]" />
                 <input type="submit" class="btn btn-danger" value="Reject" asp-route-accepted="@false" asp-route-returnUrl="@ViewData["ReturnUrl"]" />
             </div>*@
-
     </div>
 
     @*<div class="col-md-14">
