--- a/CarnivorousPlants/CarnivorousPlants/Views/Project/Index.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Project/Index.cshtml
@@ -42,7 +42,7 @@
                 </td>
                 <td>@project.Description</td>
                 <td>@project.Created.ToString("dd/MM/yyyy HH:mm:ss")</td>
-                <td>@project.LastModified.ToString("dd/MM/yyyy HH:mm:ss")</td>
+                <td>@project.LastModified</td>
                 <td><img src="@project.ThumbnailUri"/></td>
                 <td>
                     <a class="btn btn-outline-dark" asp-action="Delete" asp-route-projectId="@project.Id" onclick="return confirm('Do you really want to delete this project?');">
