Restrict access to admin menu

--- a/CarnivorousPlants/CarnivorousPlants/Views/Shared/_Layout.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         <li condition="@SignInManager.IsSignedIn(User)" class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Project" asp-action="Index">Projects</a>
                         </li>
-                        <li>@await Component.InvokeAsync("AdminMenu")</li>
+                        <li condition="@SignInManager.IsSignedIn(User) && @User.IsInRole(RoleCollection.Administrator)">@await Component.InvokeAsync("AdminMenu")</li>
                     </ul>
                 </div>
             </div>
