--- a/CarnivorousPlants/CarnivorousPlants/Views/_ViewImports.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using CarnivorousPlants
 @using CarnivorousPlants.Models
+@using CarnivorousPlants.Shared
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper CarnivorousPlants.TagHelpers*, CarnivorousPlants
