Add setting project as default button

--- a/CarnivorousPlants/CarnivorousPlants/Views/Project/Details.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Project/Details.cshtml
@@ -53,6 +53,7 @@
 </div>
 
 <a class="btn btn-success" asp-controller="Project" asp-action="Train" asp-route-projectId="@Model.Project.Id">Train</a>
+<a class="btn btn-outline-primary" asp-controller="Project" asp-action="SetDefaultProject" asp-route-projectId="@Model.Project.Id">Set this project as default</a>
 <br />
 <br />
 
